<resources>
    <string name="app_name">Commrade</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="create_account">Create Account</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_account">Don\'t Have Account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>