<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg"
    android:padding="30dp"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginScreenLogo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/ladygraphic" />

        <TextView
            android:id="@+id/createAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/create_account"
            android:textAlignment="center"
            android:textColor="#E91E63"
            android:textSize="36sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColorHint="#000000"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="#030505"
                app:hintTextColor="#000000"
                app:startIconDrawable="@drawable/ic_baseline_edit_24"
                app:startIconTint="#080B0A">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/MobileNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fullName"
                android:layout_marginTop="10dp"

                android:hint="@string/mobile_number"
                android:textColorHint="#000000"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="#030505"
                app:hintTextColor="#000000"

                app:startIconDrawable="@drawable/ic_baseline_phone_24"

                app:startIconTint="#080B0A">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MobileNumber"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/choose_gender"
                android:textColor="#000000"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/grp_radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/gender"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:fontFamily="sans-serif"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:fontFamily="sans-serif"
                    android:text="@string/male" />

            </RadioGroup>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/progressbarcutomization"
                android:elevation="10dp">

                <ProgressBar
                    android:id="@+id/progressBarSignup"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/colorPrimary"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundedbutton"
            android:onClick="redirectToOtp"
            android:text="@string/register"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/memberLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:onClick="loginActivityRedirect"
            android:text="Member Login"
            android:textColor="#050404"
            android:textSize="15sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>